Basic HTTP proxy setting (requires better validation)